--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
             </div>
+            <div class="destination" id="neapel">
+                <h2>Neapel</h2>
+            </div>
         </div>
     </div>
 
