Adding Praha-heading and style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="destination" id="neapel">
                 <h2>Neapel</h2>
             </div>
+            <div class="destination" id="praha">
+                <h2>Praha</h2>
+            </div>
         </div>
     </div>
 
