--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
+            <div class="destination" id="neapol">
+                <h2>Neapol</h2>
+            </div>
         </div>
     </div>
 
